gitops/platform/kyverno-policies/tests/base/resources/cluster-secret-fail.yaml
apiVersion: v1
kind: Secret
metadata:
  name: aks-prod-ne
  namespace: argocd
  labels:
    argocd.argoproj.io/secret-type: cluster
    env: prod
    region: northeurope
    role: workload
stringData:
  name: aks-prod-ne
