gitops/platform/kyverno-policies/tests/base/resources/cluster-secret-pass.yaml
apiVersion: v1
kind: Secret
metadata:
  name: aks-prod-we
  namespace: argocd
  labels:
    argocd.argoproj.io/secret-type: cluster
    env: prod
    region: westeurope
    role: workload
    lease-status: unmanaged
stringData:
  name: aks-prod-we
